# Tugas-Akhir_MonoRepo

./: .env.example  .gitignore  LICENSE  README.md  docker-compose-db.yml  docker-compose-wss-livekit.yml  ecosystem.config.cjs  ecosystem.config.js  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
Camera Test/: live_camera.py
Edge Code/: violence_detector.py
_result/: movenet_test_predictions.csv
camera-test/: live_camera.py
edge-code/: violence_detector.py
livekit-conf/: livekit-wss.yaml  livekit.yaml  nginx.example.conf
python-code/computer-vision/: .gitignore  dataset_preprocessing.ipynb  pyproject.toml  ta_cgn_model_builder.ipynb
python-code/edge/: .dockerignore  .env.edge-code.example  .env.example  Dockerfile.edge-code  README.md  docker-compose.example.yml  pyproject.toml  requirements.edge.txt  requirements.txt
python-code/edge/edge-code/: ai_server.py  app.py  violence_detector.py
python-code/edge/edge-code/consumer/: routes.py
python-code/edge/edge-code/consumer/service/: camera_service.py  device_service.py
python-code/edge/edge-code/lib/: crowd_cluster.py  detector.py  livekit_access_token.py  livekit_message_publish.py  utils.py
python-code/edge/edge-code/lib/lib_ai/: _ai_gcn_model_copy.py  _ai_gcn_model_test_int8.py  _ai_gnn_tcn_model_copy.py  camera_stream.py  detector.py
python-code/edge/edge-code/lib/lib_app/: camera_process.py  get_camera.py
python-code/edge/systemd-service/: mocavis-edge-code.conf
python-code/edge/test-code/: delegation_test.py  multi_camera_test.py  test_tflite_pure.py  yolo_inference_test.py
(+228 files in other folders)
