[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "onnxslim>=0.1.93",
    "pandas>=3.0.3",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "ultralytics>=8.4.50",
]
