[project]
name = "edge-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "aiohttp==3.13.5",
    "livekit==1.1.6",
    "livekit-api==1.1.0",
    "numpy>=1.26.4",
    "opencv-python-headless>=4.11.0.86",
    "python-dotenv==1.2.2",
    "torch==2.9.0",
    "ultralytics==8.3.50",
    "uuid6==2025.0.1",
]
